# Gregory

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.json.example  pyproject.toml  run.bat
.github/workflows/: ci.yml
debug/: README.md  chat.html  config.html  logging.html
docker/: Dockerfile  docker-compose.yml
docs/: AI_SYSTEM.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  HOME_ASSISTANT.md  KNOWN_ISSUES.md  MEMORY.md  README.md  ROADMAP.md  STATUS.md  TOOLS.md  TROUBLESHOOTING.md
notes/: .gitkeep  README.md
src/gregory/: __init__.py  config.py  heartbeat.py  log_buffer.py  main.py  ollama_ensure.py  store.py
src/gregory/ai/: __init__.py  config.py  observations.py  prompts.py  router.py  selector.py
src/gregory/ai/providers/: __init__.py  base.py  claude.py  gemini.py  ollama.py
src/gregory/api/: schemas.py
src/gregory/api/routes/: chat.py  debug.py  health.py  memory.py  users.py
src/gregory/memory/: __init__.py  journal.py  loader.py  service.py  vector_store.py
src/gregory/notes/: __init__.py  loader.py  service.py
src/gregory/tools/: __init__.py  home_assistant.py  web_search.py  wikipedia.py
tests/: conftest.py  test_chat.py  test_home_assistant.py  test_observations.py  test_prompts.py
tests/memory/: test_journal.py  test_loader.py  test_vector_store.py
