[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gregory"
version = "0.2.0"
description = "Gregory - Smart House AI: HTTP API glue for AI backends, Home Assistant, and Jellyfin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "google-genai>=1.0.0",
    "chromadb>=0.6.0",
    "ddgs>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gregory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
